# litellm-hf-local

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  custom_handler.py  litellm_config.yaml  pyproject.toml
benchmark/: benchmark_suite.py
docs/: LiteLLM Proxy Setup Guide.md  Memory Monitoring Guide.md  Quantization Dependencies Troubleshooting Guide.md  UV Package Management Guide.md
examples/: memory_monitoring_example.py
handlers/: __init__.py  qwen_handler.py
src/: __init__.py
src/hf_local_adapter/: __init__.py  adapter.py
src/hf_local_adapter/config/: __init__.py  model_config.py
src/hf_local_adapter/factories/: __init__.py  model_factories.py
src/hf_local_adapter/formatting/: __init__.py  message_formatter.py  templates.py
src/hf_local_adapter/generation/: __init__.py  parameters.py  stopping_criteria.py
src/hf_local_adapter/utils/: __init__.py  logging.py  memory.py  tokenization.py
tests/: test_lightllm.py  test_memory_monitoring.py
